# lustre-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: bounds.rs  bvh.rs  camera.rs  cli.rs  color.rs  hittable.rs  hittables.rs  linalg.rs  main.rs  material.rs  rand_util.rs  ray.rs  render.rs  scatter.rs  scenes.rs  sphere.rs  texture.rs  textures.rs  utils.rs  vec3.rs
src/hittables/: list.rs  quad.rs  quadbox.rs  sphere.rs  transform.rs  volume.rs
src/textures/: checkered.rs  image.rs  noise.rs  perlin.rs
src/utils/: noise.rs  progress.rs  random.rs
