[package]
name = "lustre"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Barios <nbarrios1337@gmail.com>"]
description = "Toy Ray-Tracing Renderer"
repository = "https://github.com/nbarrios1337/lustre-rs"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.21.2", features = ["debug-glam-assert", "rand"] }
clap = { version = "3.2.14", features = ["derive", "wrap_help"] }
indicatif = { version = "0.17.0", features = ["rayon"]}
image = "0.24.3"
noise = "0.7.0"
num-traits = "0.2.15"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rayon = "1.5.3"
